// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slogan Ticker > Default > renders correctly 1`] = `
<jest>
  <div
    class="ecl-slogan-ticker"
    data-ecl-auto-init="SloganTicker"
    data-ecl-slogan-ticker="true"
    id="slogan-ticker-default"
  >
    <div
      class="ecl-slogan-ticker__viewport"
      data-ecl-slogan-ticker-slider=""
    >
      <ul
        class="ecl-slogan-ticker__track"
      >
        <li
          class="ecl-slogan-ticker__slide"
        >
          GENERATE YOUR OWN ENERGY
        </li>
        <li
          class="ecl-slogan-ticker__slide"
        >
          SAVE TOGETHER
        </li>
        <li
          class="ecl-slogan-ticker__slide"
        >
          LOWER YOUR BILLS
        </li>
        <li
          class="ecl-slogan-ticker__slide"
        >
          Sustainability and inclusion
        </li>
        <li
          class="ecl-slogan-ticker__slide"
        >
          Creating opportunities
        </li>
      </ul>
    </div>
    <div
      class="ecl-slogan-ticker__controls"
    >
      <button
        class="ecl-button ecl-button--tertiary ecl-slogan-ticker__button ecl-slogan-ticker__play ecl-button--icon-only"
        data-ecl-slogan-ticker-play=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Play slogan ticker
          </span>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--play-filled ecl-icon ecl-icon--l ecl-button__icon ecl-icon-phosphor--play-filled"
            data-ecl-icon=""
          />
        </span>
      </button>
      <button
        class="ecl-button ecl-button--tertiary ecl-slogan-ticker__button ecl-slogan-ticker__pause ecl-button--icon-only"
        data-ecl-slogan-ticker-pause=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Pause slogan ticker
          </span>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--pause-filled ecl-icon ecl-icon--l ecl-button__icon ecl-icon-phosphor--pause-filled"
            data-ecl-icon=""
          />
        </span>
      </button>
    </div>
  </div>
</jest>
`;

exports[`Slogan Ticker > Default > renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-slogan-ticker"
    data-ecl-auto-init="SloganTicker"
    data-ecl-slogan-ticker="true"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="slogan-ticker-default"
  >
    <div
      class="ecl-slogan-ticker__viewport"
      data-ecl-slogan-ticker-slider=""
    >
      <ul
        class="ecl-slogan-ticker__track"
      >
        <li
          class="ecl-slogan-ticker__slide"
        >
          GENERATE YOUR OWN ENERGY
        </li>
        <li
          class="ecl-slogan-ticker__slide"
        >
          SAVE TOGETHER
        </li>
        <li
          class="ecl-slogan-ticker__slide"
        >
          LOWER YOUR BILLS
        </li>
        <li
          class="ecl-slogan-ticker__slide"
        >
          Sustainability and inclusion
        </li>
        <li
          class="ecl-slogan-ticker__slide"
        >
          Creating opportunities
        </li>
      </ul>
    </div>
    <div
      class="ecl-slogan-ticker__controls"
    >
      <button
        class="ecl-button ecl-button--tertiary ecl-slogan-ticker__button ecl-slogan-ticker__play ecl-button--icon-only"
        data-ecl-slogan-ticker-play=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Play slogan ticker
          </span>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--play-filled ecl-icon ecl-icon--l ecl-button__icon ecl-icon-phosphor--play-filled"
            data-ecl-icon=""
          />
        </span>
      </button>
      <button
        class="ecl-button ecl-button--tertiary ecl-slogan-ticker__button ecl-slogan-ticker__pause ecl-button--icon-only"
        data-ecl-slogan-ticker-pause=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Pause slogan ticker
          </span>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--pause-filled ecl-icon ecl-icon--l ecl-button__icon ecl-icon-phosphor--pause-filled"
            data-ecl-icon=""
          />
        </span>
      </button>
    </div>
  </div>
</jest>
`;

exports[`Slogan Ticker > Default > renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-slogan-ticker custom-class custom-class--test"
    data-ecl-auto-init="SloganTicker"
    data-ecl-slogan-ticker="true"
    id="slogan-ticker-default"
  >
    <div
      class="ecl-slogan-ticker__viewport"
      data-ecl-slogan-ticker-slider=""
    >
      <ul
        class="ecl-slogan-ticker__track"
      >
        <li
          class="ecl-slogan-ticker__slide"
        >
          GENERATE YOUR OWN ENERGY
        </li>
        <li
          class="ecl-slogan-ticker__slide"
        >
          SAVE TOGETHER
        </li>
        <li
          class="ecl-slogan-ticker__slide"
        >
          LOWER YOUR BILLS
        </li>
        <li
          class="ecl-slogan-ticker__slide"
        >
          Sustainability and inclusion
        </li>
        <li
          class="ecl-slogan-ticker__slide"
        >
          Creating opportunities
        </li>
      </ul>
    </div>
    <div
      class="ecl-slogan-ticker__controls"
    >
      <button
        class="ecl-button ecl-button--tertiary ecl-slogan-ticker__button ecl-slogan-ticker__play ecl-button--icon-only"
        data-ecl-slogan-ticker-play=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Play slogan ticker
          </span>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--play-filled ecl-icon ecl-icon--l ecl-button__icon ecl-icon-phosphor--play-filled"
            data-ecl-icon=""
          />
        </span>
      </button>
      <button
        class="ecl-button ecl-button--tertiary ecl-slogan-ticker__button ecl-slogan-ticker__pause ecl-button--icon-only"
        data-ecl-slogan-ticker-pause=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Pause slogan ticker
          </span>
          <span
            aria-hidden="true"
            class="wt-icon-phosphor--pause-filled ecl-icon ecl-icon--l ecl-button__icon ecl-icon-phosphor--pause-filled"
            data-ecl-icon=""
          />
        </span>
      </button>
    </div>
  </div>
</jest>
`;
